--- a/day_6/style.css
+++ b/day_6/style.css
@@ -32,7 +32,8 @@ h1 {
   background-color: aliceblue;
   margin: 0 auto 50px;
   box-shadow: rgba(220, 220, 220, 0.43) 0px 0px 15px 5px;
-  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, opacity 0.2s ease;
+  opacity: 0;
 }
 
 .box:nth-of-type(odd) {
@@ -45,4 +46,5 @@ h1 {
 
 .box.show {
   transform: translateX(0);
+  opacity: 1;
 }
