--- a/day_20/style.css
+++ b/day_20/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   overflow: hidden;
 }
 
@@ -57,8 +57,6 @@ button {
   overflow: hidden;
   cursor: pointer;
   text-transform: uppercase;
-  background-position: center;
-  transition: background 0.8s;
 }
 
 button:focus {
